# final-nn

./: .gitignore  README.md  autoencoder_mnist.ipynb  classifier_DNA.ipynb  mnist.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
