[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Minh Le", email = "minh.le4@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", 
	"numpy",
]

[project.urls]
Home = "https://github.com/minh-science/HW7-Regression"